tests/errors/validation/field-inside-namespace.fn
---
Description: Field declared inside a namespace
Expected: compile error
---

namespace BadNs
{
    orphanField: i32
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
